# LedStripServer

./: .gitignore  CMakeLists.txt  CMakePresets.json
CMake/: toolchain-arm-gcc.cmake
Docs/: ClassHierarchy.puml
Src/: CMakeLists.txt  main.cpp
Src/Common/: Common.hpp
Src/Communication/: Network.cpp  Network.hpp  TcpIp.cpp  TcpIp.hpp  Usb.cpp  Usb.hpp
Src/Configurators/: TcpIpConfigurator.cpp  TcpIpConfigurator.hpp  UsbConfigurator.cpp  UsbConfigurator.hpp
Src/Interface/: Communication.hpp  Protocol.hpp  SocketInterface.hpp  TerminalInterface.hpp
Src/Network/: server.cpp  server.hpp
Src/Server/: server.cpp  server.hpp
Tests/: CMakeLists.txt
Tests/Mocks/: TcpIpConfiguratorMock.hpp  UsbConfiguratorMock.hpp
Tests/Template/: CMakeLists.txt
Tests/Test_TcpIp/: CMakeLists.txt  Test_TcpIp.cpp
Tests/Test_Usb/: CMakeLists.txt  Test_Usb.cpp
